# MCP-For-Minecraft-Server

./: .gitattributes  .gitignore  CONTRIBUTING.md  EXAMPLES.md  INSTALL.md  LICENSE  MANIFEST.in  MCP_CONFIGURATION.md  PUBLISHING.md  README.md  README_EN.md  README_ZH.md  build.bat  build.sh  pyproject.toml  quick-start.bat  quick-start.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml
plugin/: CONFIGURATION.md  README.md  build.bat  build.sh  pom.xml
plugin/src/main/java/com/smc/plugin/: SMCPlugin.java
plugin/src/main/java/com/smc/plugin/api/: HttpApiServer.java
plugin/src/main/java/com/smc/plugin/command/: CommandExecutor.java  CommandOutputCapture.java
plugin/src/main/java/com/smc/plugin/config/: ConfigManager.java
plugin/src/main/java/com/smc/plugin/logging/: LogAppenderManager.java  LogCollector.java  SMCLogAppender.java
plugin/src/main/java/com/smc/plugin/version/: LegacyAdapter.java  ModernAdapter.java  UnsupportedVersionException.java  VersionAdapter.java  VersionAdapterFactory.java
plugin/src/main/resources/: config.yml  plugin.yml
plugin/src/test/java/com/smc/plugin/: SMCPluginTest.java
plugin/src/test/java/com/smc/plugin/config/: ConfigManagerTest.java
plugin/src/test/java/com/smc/plugin/logging/: LogCollectorTest.java
src/smc/: __init__.py  __main__.py  client.py  config.py  connection_manager.py  server.py  tools.py
tests/: test_basic.py  test_get_errors.py  test_get_logs.py  test_get_warnings.py  test_plugins.py  test_server.py
