[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "minecraft-server-mcp"
version = "0.1.1"
description = "Model Context Protocol server for Minecraft server management"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
keywords = ["mcp", "minecraft", "server", "management", "model-context-protocol", "ai"]
authors = [
    { name = "Ver_zhzh", email = "P1416727282@163.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Games/Entertainment",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "black>=24.0.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]

[project.urls]
Homepage = "https://github.com/Ver-zhzh/MCP-For-Minecraft-Server"
Documentation = "https://github.com/Ver-zhzh/MCP-For-Minecraft-Server#readme"
Repository = "https://github.com/Ver-zhzh/MCP-For-Minecraft-Server"
Issues = "https://github.com/Ver-zhzh/MCP-For-Minecraft-Server/issues"

[project.scripts]
minecraft-mcp = "smc.__main__:cli_main"

[tool.hatch.build.targets.wheel]
packages = ["src/smc"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/LICENSE",
]
exclude = [
    "/.git",
    "/.venv",
    "/plugin",
    "*.log",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=smc --cov-report=term-missing"

[tool.black]
line-length = 100
target-version = ["py312"]
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py312"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
